# shal

./: .agent-loop.yml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/shal-brand/: SKILL.md
.claude/skills/shal-build-bus/: SKILL.md
.claude/skills/shal-build-driver/: SKILL.md
.claude/skills/shal-build-yaml/: SKILL.md
.claude/skills/shal-generate-driver/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: agent-loop.yml  ci.yml  release.yml
dev/eval/agenticqa/: LIVE-MCP-LOOP.md  README.md  control_loop.py  live_mcp_loop.py  run.py
dev/eval/cold-start-verify/: .env.example  .gitignore  DoD.md  README.md  approver-prompt.md  operator-prompt.md  setup.sh
dev/eval/cold-start-verify/devices/: deebot.md  sonos.md
dev/eval/manuscripts/: SCHEMA.md  deebot.yaml  sonos.yaml
dev/eval/new-user-trial/: README.md
docs/: ARCHITECTURE.md  CATALOG.md  DECISIONS - V2.1.md  DESIGN - PHASE 2 ASYNC.md  DESIGN - V1.md  DESIGN V2.md  SDK.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/archive/: PROPOSAL - SW TOPOLOGIES.md
docs/design/archive/: README.md
eval/cold-start/: .gitignore  AGENT_BRIEF.md  README.md  metrics.sample.json  metrics.schema.json  sitecustomize_guard.py  stage_run.py  verify_run.py
eval/cold-start/devices/: deebot.md  sonos.md
eval/cold-start/templates/: REPORT.md
eval/new-user-trial/: README.md  REPORT.template.md  TRIAL_BRIEF.template.md
eval/new-user-trial/reports/: 2026-06-16-sonos-deebot-COO.md
examples/demos/deebot/: deebot_driver.py  deebot_real.yaml  demo_real.py  demo_sim.py  list_devices.py
examples/demos/mesh/: mesh_drivers.py  mesh_flight.jsonl  services.py
examples/demos/sonos/: README.md  demo_sim.py  sonos.yaml  sonos_driver.py  sonos_sim.yaml
examples/driver-creator/: README.md  conftest.py  emit_manifest.py  run_benchmark.py
examples/driver-creator/deebot/: RECIPE.md
examples/driver-creator/deebot/docs/: deebot-cloud-transport.md  deebot-protocol.md
examples/driver-creator/deebot/harness/: fake_portal.py  sim_harness.py  test_harness.py  test_harness_stage2.py  topology.yaml  topology_stage2.yaml
examples/driver-creator/http-service/: RECIPE.md
examples/driver-creator/http-service/docs/: chamberlink-notes.md  chamberlink-openapi.yaml
examples/driver-creator/http-service/harness/: sim_harness.py  test_harness.py  topology.yaml
examples/driver-creator/scpi-psu/: RECIPE.md
examples/driver-creator/scpi-psu/docs/: vx3210-manual.md
examples/driver-creator/scpi-psu/harness/: sim_harness.py  test_harness.py  topology.yaml
examples/driver-creator/sht31/: RECIPE.md
examples/driver-creator/sht31/docs/: sht31-datasheet.md
examples/driver-creator/sht31/harness/: sim_harness.py  test_harness.py  topology.yaml
integrations/: README.md
integrations/claude-code/: CONNECT.md
integrations/claude-code/skills/shal-build-bus/: SKILL.md
integrations/claude-code/skills/shal-build-driver/: SKILL.md
integrations/claude-code/skills/shal-build-yaml/: SKILL.md
integrations/claude-code/skills/shal-generate-driver/: SKILL.md
playground/deebot/: README.md  deebot_driver.py  deebot_sim.yaml  demo_sim.py  ecovacs_bus.py  sim_cloud.py
playground/mesh/: README.md  demo_mesh.py  mesh.yaml  mesh_flight.jsonl
schema/: shal-v1.schema.json
sim/: buses.py  core.py  drivers.py  robustness_demo.py  run.py  timeout_demo.py
sim/topologies/: async.json  bench.json  cycle.json  industrial.json  iot.json  remote.json
src/shal/: AGENT_GUIDE.md  SDK.md  __init__.py  approval.py  capabilities.py  cli.py  conformance.py  discovery.py  driver.py  errors.py  hal.py  limits.py  loader.py  log.py  logging.py  node.py  registry.py  transport.py
src/shal/buses/: http_bus.py  i2c_cli.py  local.py  mux.py  scpi_raw.py  sim.py  sim_msg.py  sim_scpi.py  spi_cli.py  ssh.py  tcp.py
src/shal/drivers/: ads1115.py  ina219.py  keysight_34461a.py  mcp23017.py  mcp9808.py  rigol_dp832.py  sonos.py  tmp102.py
src/shal/mcp/: __init__.py  bridge.py  server.py
src/shal/schema/: shal-v1.schema.json
tests/: conftest.py  setup_sim.yaml  test_agent_tools.py  test_agenticqa_control_loop.py  test_approval.py  test_buses.py  test_catalog.py  test_cli.py  test_conformance.py  test_discovery.py  test_dotenv.py  test_drivers.py  test_includes.py  test_limits.py  test_logging.py  test_mcp_bridge.py  test_mcp_errors.py  test_mcp_local_drivers.py  test_mcp_probe.py  test_mcp_server.py  test_registry_collisions.py  test_shal.py  test_sim_buses.py  test_skill_skeleton.py  test_sonos.py  test_warm.py
tests/e2e/: conftest.py  test_cli_stack.py  test_feature_combo.py  test_scpi_stack.py  test_tcp_stack.py
